--- a/zoo-frontend/package.json
+++ b/zoo-frontend/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@mui/x-date-pickers": "^7.2.0",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-cookie": "^7.1.0",
